# fintech-rust

./: README.md
octopus-cli/: Cargo.toml
octopus-cli/src/: core.rs  main.rs  trading_platform.rs
octopus-cli/src/core/: matching.rs
octopus-common/: Cargo.toml
octopus-common/src/: errors.rs  lib.rs  types.rs
octopus-web/: Cargo.toml
octopus-web/src/: main.rs  trading_platform.rs
prj2-core-algorithms-and-data-structures/src/: core.rs  trading_platform.rs
prj3-shared-marketplace-api/: Cargo.toml
prj3-shared-marketplace-api/octopus-cli/src/: main.rs
prj3-shared-marketplace-api/octopus-web/: Cargo.toml
prj3-shared-marketplace-api/octopus-web/src/: main.rs
src/: accounting.rs  main.rs  trading_platform.rs
src/core/: matching.rs
