[package]
name = "octopus-web"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.6"
octopus-common = { path = "../octopus-common" }
pretty_env_logger = "0.5.0"
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.41.1", features = ["full"] }
warp = "0.3.7"
